--- a/templates/compracerta.html
+++ b/templates/compracerta.html
@@ -17,8 +17,8 @@
             <li>Detalhes: {{ payment_info.description }}</li>
             <li>Valor: R$ {{ payment_info.transaction_amount }}</li>
             <li>Data: {{ payment_info.date_approved }}</li>
-            <li>ID do Comprador: {{ payment_info.payer.identification.type }}</li>
-            <li>Email do Comprador: {{ payment_info.payer.identification.number }}</li>
+            <li>Tipo de ID do Comprador: {{ payment_info.payer.identification.type }}</li>
+            <li>Número de ID do Comprador: {{ payment_info.payer.identification.number }}</li>
         </ul>
     {% else %}
         <p>Não há informações de pagamento disponíveis.</p>
