voltando para link de pagamento

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,196 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Bem-vindo</h1>
-    <form id="payment-form">
-        <label for="plano">Selecione um plano de assinatura:</label>
-        <select name="plano" id="plano">
-            <option value="starter">Starter</option>
-            <option value="advanced">Advanced</option>
-            <option value="premium">Premium</option>
-        </select>
-
-        <h2>Dados do Cartão</h2>
-        <div>
-            <label for="form-checkout__cardNumber">Número do Cartão</label>
-            <input type="text" id="form-checkout__cardNumber" name="cardNumber" />
-        </div>
-        <div>
-            <label for="form-checkout__expirationDate">Data de Expiração</label>
-            <input type="text" id="form-checkout__expirationDate" name="expirationDate" />
-        </div>
-        <div>
-            <label for="form-checkout__cardholderName">Nome no Cartão</label>
-            <input type="text" id="form-checkout__cardholderName" name="cardholderName" />
-        </div>
-        <div>
-            <label for="form-checkout__securityCode">Código de Segurança</label>
-            <input type="text" id="form-checkout__securityCode" name="securityCode" />
-        </div>
-        <div>
-            <label for="form-checkout__identificationType">Tipo de Documento</label>
-            <select id="form-checkout__identificationType" name="identificationType"></select>
-        </div>
-        <div>
-            <label for="form-checkout__identificationNumber">Número do Documento</label>
-            <input type="text" id="form-checkout__identificationNumber" name="identificationNumber" />
-        </div>
-        <div>
-            <label for="form-checkout__installments">Parcelas</label>
-            <select id="form-checkout__installments" name="installments"></select>
-        </div>
-        <div>
-            <label for="form-checkout__issuer">Banco Emissor</label>
-            <select id="form-checkout__issuer" name="issuer"></select>
-        </div>
-        <button type="submit">Assinar</button>
-    </form>
-
-    <script>
-        const mp = new MercadoPago('APP_USR-95f4d605-217f-43bb-86f3-2d5f419b4adc', {
-            locale: 'pt-BR' // O locale de sua preferência
-        });
-
-        console.log('mp', mp);
-
-        // Adiciona tipos de identificação ao select
-        mp.getIdentificationTypes().then(function(response) {
-            const identificationTypeElement = document.getElementById('form-checkout__identificationType');
-            response.forEach(function(identificationType) {
-                const option = document.createElement('option');
-                option.value = identificationType.id;
-                option.textContent = identificationType.name;
-                identificationTypeElement.appendChild(option);
-            });
-            console.log('Identification types added');
-        });
-
-        const cardForm = mp.cardForm({
-            amount: "100.5",
-            autoMount: true,
-            form: {
-                id: "payment-form",
-                cardNumber: {
-                    id: "form-checkout__cardNumber",
-                    placeholder: "Número do cartão",
-                },
-                expirationDate: {
-                    id: "form-checkout__expirationDate",
-                    placeholder: "MM/YY",
-                },
-                securityCode: {
-                    id: "form-checkout__securityCode",
-                    placeholder: "Código de segurança",
-                },
-                cardholderName: {
-                    id: "form-checkout__cardholderName",
-                    placeholder: "Titular do cartão",
-                },
-                identificationType: {
-                    id: "form-checkout__identificationType",
-                },
-                identificationNumber: {
-                    id: "form-checkout__identificationNumber",
-                    placeholder: "Número do documento",
-                },
-                installments: {
-                    id: "form-checkout__installments",
-                    placeholder: "Parcelas",
-                },
-                issuer: {
-                    id: "form-checkout__issuer",
-                    placeholder: "Banco emissor",
-                }
-            },
-            callbacks: {
-                onFormMounted: error => {
-                    if (error) {
-                        console.warn("Form Mounted handling error: ", error);
-                    } else {
-                        console.log("Form mounted successfully");
-                    }
-                },
-                onSubmit: event => {
-                    event.preventDefault();
-                    console.log('Form submit event triggered');
-                    const formData = cardForm.getCardFormData();
-                    console.log('formData', formData);
-
-                    const {
-                        paymentMethodId: payment_method_id,
-                        issuerId: issuer_id,
-                        cardholderEmail: email,
-                        amount,
-                        token,
-                        installments,
-                        identificationNumber,
-                        identificationType
-                    } = formData;
-
-                    // Verifique se todos os dados necessários estão presentes
-                    if (!token || !payment_method_id || !installments || !issuer_id || !identificationNumber || !identificationType) {
-                        console.error("Dados do formulário estão incompletos.");
-                        alert("Por favor, preencha todos os campos do formulário.");
-                        return;
-                    }
-
-                    // Obtenha o plano selecionado
-                    const plano = document.getElementById('plano').value;
-                    console.log('plano', plano);
-
-                    fetch("/criar_assinatura", {
-                        method: "POST",
-                        headers: {
-                            "Content-Type": "application/json",
-                        },
-                        body: JSON.stringify({
-                            token,
-                            payment_method_id,
-                            issuer_id,
-                            email,
-                            amount,
-                            installments,
-                            identificationNumber,
-                            identificationType,
-                            plan_id: plano, // Envie o ID do plano
-                            user_id: '123456789' // Exemplo de ID do usuário
-                        }),
-                    })
-                    .then(response => response.json())
-                    .then(result => {
-                        console.log('result', result);
-                        if (result.error) {
-                            alert("Erro ao criar assinatura: " + result.error);
-                        } else {
-                            alert("Assinatura criada com sucesso!");
-                        }
-                    })
-                    .catch(error => {
-                        console.error("Erro ao criar assinatura: ", error);
-                        alert("Erro ao criar assinatura");
-                    });
-                },
-                onFetching: (resource) => {
-                    console.log("Fetching resource: ", resource);
-
-                    // Animate progress bar
-                    const progressBar = document.querySelector(".progress-bar");
-                    if (progressBar) {
-                        progressBar.removeAttribute("value");
-                    }
-
-                    return () => {
-                        if (progressBar) {
-                            progressBar.setAttribute("value", "0");
-                        }
-                    };
-                }
-            },
-        });
-    </script>
+    <h1>Ecommerce Teste</h1>
+    <p>Camisa</p>
+    <p>Preço: R$259,99</p>
+    <a href={{ link_pagamento }}>Compre aqui</a>
 </body>
 </html>
